--- a/libft/Makefile
+++ b/libft/Makefile
@@ -15,6 +15,8 @@ HEADER = libft.h
 SOURCES = ft_atoi.c \
 			ft_bzero.c \
 			ft_chrcmp.c \
+			ft_findchr.c \
+			ft_get_next_line.c \
 			ft_isalnum.c \
 			ft_isalpha.c \
 			ft_isascii.c \
